fix: url formated, update artikel error
